adjust leave record relation
